--- a/indexSpeak.html
+++ b/indexSpeak.html
@@ -28,6 +28,9 @@
                     </div>
                 </div>
             </div>
+            <div class = "menu-btn">Library</div>
+            <div class = "menu-btn">Resources</div>
+            <div class = "menu-btn">Videos</div>
         </div>
     </header>
 
