--- a/indexSpeak.html
+++ b/indexSpeak.html
@@ -6,6 +6,10 @@
     <link rel = "Stylesheet" type = "text/css" href = "styles/speakStyle.css"/>
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alegreya SC' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Allan' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Asset' rel='stylesheet'>
+
     <script defer type = "text/javascript" src = "js/speakScript.js"></script>
 
 </head>
@@ -33,6 +37,84 @@
             <div class = "menu-btn">Videos</div>
         </div>
     </header>
+
+    <!--section[2]-->
+    <section class = "rows row-1">
+        <!--Part1-->
+        <div id = "intro-content">
+            <div id = "caption">
+                Learn on your schedule
+                <p id = "text"> Study any topic, anytime from a lot of materials shared for you </p>
+            </div>
+        
+
+            <!--Part2-->
+            <div id = "intro-interact">
+                <div id = "motivation">
+                    <div class = "mot-header">
+                        <p class = "mot-text">
+                            Learning English makes it easier to communicate while abroad
+                        </p>
+                        <div class = "plus">
+                            <div class = "row-v"></div>
+                            <div class = "row-h"></div>
+                        </div>
+                    </div>
+                    <div class = "motivation-content">
+                        if you want to explore the world, it says to have some knowledge
+                        of English. Did you know that <a class = "hrf" href = "http://worldpopulationreview.com/countries/english-speaking-countries/">58 countries</a>
+                        list English as one of their official languages?
+                    </div>
+                    <div class = "mot-header">
+                            <p class = "mot-text">
+                                English is the closest the world comes to having a global language
+                            </p>
+                            <div class = "plus">
+                                <div class = "row-v"></div>
+                                <div class = "row-h"></div>
+                            </div>
+                        </div>
+                        <div class = "motivation-content">
+                                In five years’ time the total population is likely to be over 7.5 billion. By 2020, it’s predicted that <a class = "hrf" href = "https://www.forbes.com/sites/dorieclark/2012/10/26/english-the-language-of-global-business/"> two billion people </a> all over the world will be studying English – that’s over a quarter of the world all learning the same language!
+                        </div>
+                        <div class = "mot-header">
+                                <p class = "mot-text">
+                                Learning English improves career prospects
+                                </p>
+                                <div class = "plus">
+                                    <div class = "row-v"></div>
+                                    <div class = "row-h"></div>
+                                </div>
+                            </div>
+                            <div class = "motivation-content">
+                                    English is the unofficial global language of business – in fact, <a class = "hrf" href = "https://hbr.org/2012/05/global-business-speaks-english">some international companies</a> have even made English their official language! Being proficient in more than one language is always attractive to employers, particularly if one of those languages is English.
+                            </div>
+                            <div class = "mot-header">
+                                    <p class = "mot-text">
+                                        Learning English makes it easier to communicate while abroad
+                                    </p>
+                                    <div class = "plus">
+                                        <div class = "row-v"></div>
+                                        <div class = "row-h"></div>
+                                    </div>
+                                </div>
+                                <div class = "motivation-content">
+                                        Not being able to communicate properly with key stakeholders is a frustrating barrier to success; 42% of our survey respondents said they were motivated to learn English to make life easier for them at work.
+                                </div>
+                </div><!--end of motivation-->
+                
+            </div>
+
+
+
+
+
+
+
+
+
+            </div><!--end of intero-content-->
+    </section>
 
 
 
