--- a/placeholder templates/placeholder.html
+++ b/placeholder templates/placeholder.html
@@ -17,6 +17,7 @@
             }
             .header {
                 border-radius: 20px;
+                height: 40px;
                 background-color: #CDCDCD;
                 animation: ani 1s infinite;
             }
