--- a/indexSpeak.html
+++ b/indexSpeak.html
@@ -161,6 +161,30 @@
     </section>
     <section class = "row row-2">
         <div class = "shadow"></div>
+        <div id = "user-offers">
+            <div class = "grid-offer">
+                <div class = "symbol symbol-1">
+                    <i class="material-icons" style = "color: #ffffff; font-size: 60px;">shop</i>
+                </div>
+                <div class = "header-offer">More than 100 online course</div>
+                <div class = "caption-offer">Explore a variety of fresh topics</div>
+            </div>
+            <div class = "grid-offer">
+                    <div class = "symbol symbol-1">
+                        <i class="material-icons" style = "color: #ffffff; font-size: 60px;">done_all</i>
+                    </div>
+                    <div class = "header-offer">Expert instruction</div>
+                    <div class = "caption-offer">Find the right instructor for you</div>
+            </div>
+            <div class = "grid-offer">
+                    <div class = "symbol symbol-1">
+                        <i class="material-icons" style = "color: #ffffff; font-size: 60px;">access_time</i>
+                    </div>
+                    <div class = "header-offer">Lifetime access</div>
+                    <div class = "caption-offer">Learn on your schedule</div>
+            </div>
+
+        </div>
         
     </section>
 
