--- a/contents/level1.html
+++ b/contents/level1.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 
+<template id = "tem">
     <div class = "card">
         <div class = "image-front">
             <img src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/level1.png">
@@ -12,6 +13,7 @@
         <div class = "header-front"></div>
         <div class = "author"></div>
     </div>
+</template>
 
 
 
