--- a/contents/level1.html
+++ b/contents/level1.html
@@ -14,11 +14,12 @@
         <div class = "author"></div>
     </div>
     <style>
-    .card {
+ .card {
     width: 250px;
     height: 250px;
     background-color: #00594F;
     color: #ffffff;
+    transition: 0.5s ease-in;
   }
 .header-front {
     width: inherit;
