--- a/contents/level1.html
+++ b/contents/level1.html
@@ -10,28 +10,31 @@
         <div class = "image-front">
             <img style = "width: 250px; height: 150px;" src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/level1.png">
         </div>
-        <div class = "header-front"></div>
-        <div class = "author"></div>
+        <div class = "header-front">Personal pronouns / „to be“</div>
+        <div class = "author">Author: Amir Youssef</div>
     </div>
     <style>
- .card {
+.card {
     width: 250px;
     height: 250px;
     background-color: #00594F;
     color: #ffffff;
-    transition: 0.5s ease-in;
+    transition: 0.5s ease-in-out;
+    font-family: Alegreya Sans;
   }
 .header-front {
     width: inherit;
     height: 50px;
     text-align: center;
     line-height: 2;
+    font-size: 22px;
   }
 .author{
     width: inherit;
     height: 50px;
     text-align: center;
     line-height: 2;
+    font-size: 20px;
   }
 .image-front {
     width: inherit;
