--- a/contents/level1.html
+++ b/contents/level1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> English level1</title>
+    <link href='https://fonts.googleapis.com/css?family=Alegreya Sans' rel='stylesheet'>
 </head>
 <body>
 
