--- a/contents/level1.html
+++ b/contents/level1.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title> English level1</title>
-    <link href='https://fonts.googleapis.com/css?family=Alegreya Sans' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Alegreya Sans' rel='stylesheet'>
 </head>
 <body>
 
-<template id = "tem">
+<template class = "tem">
     <div class = "card">
         <div class = "image-front">
             <img style = "width: 250px; height: 150px;" src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/level1.png">
@@ -48,6 +48,94 @@
 }
 </style>
 </template>
+
+<template class = "tem">
+        <div class = "card">
+            <div class = "image-front">
+                <img style = "width: 250px; height: 150px;" src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/level1.png">
+            </div>
+            <div class = "header-front">Personal pronouns / „to be“</div>
+            <div class = "author">Author: Amir Youssef</div>
+        </div>
+        <style>
+    .card {
+        width: 250px;
+        height: 250px;
+        background-color: #00594F;
+        color: #ffffff;
+        transition: 0.5s ease-in-out;
+        font-family: Alegreya Sans;
+      }
+    .header-front {
+        width: inherit;
+        height: 50px;
+        text-align: center;
+        line-height: 2;
+        font-size: 20px;
+      }
+    .author{
+        width: inherit;
+        height: 50px;
+        text-align: center;
+        line-height: 2;
+        font-size: 18px;
+      }
+    .image-front {
+        width: inherit;
+        height: 150px;
+        cursor: pointer;
+    }
+    .im-content {
+        width: 250px;
+        height: 150px;
+    }
+    </style>
+    </template>
+
+    <template class = "tem">
+            <div class = "card">
+                <div class = "image-front">
+                    <img style = "width: 250px; height: 150px;" src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/level1.png">
+                </div>
+                <div class = "header-front">Personal pronouns / „to be“</div>
+                <div class = "author">Author: Amir Youssef</div>
+            </div>
+            <style>
+        .card {
+            width: 250px;
+            height: 250px;
+            background-color: #00594F;
+            color: #ffffff;
+            transition: 0.5s ease-in-out;
+            font-family: Alegreya Sans;
+          }
+        .header-front {
+            width: inherit;
+            height: 50px;
+            text-align: center;
+            line-height: 2;
+            font-size: 20px;
+          }
+        .author{
+            width: inherit;
+            height: 50px;
+            text-align: center;
+            line-height: 2;
+            font-size: 18px;
+          }
+        .image-front {
+            width: inherit;
+            height: 150px;
+            cursor: pointer;
+        }
+        .im-content {
+            width: 250px;
+            height: 150px;
+        }
+        </style>
+        </template>
+        
+    
 
 
 
