--- a/contents/level1.html
+++ b/contents/level1.html
@@ -59,6 +59,7 @@
         </div>
         <style>
     .card {
+        margin: 5px;
         width: 250px;
         height: 250px;
         background-color: #00594F;
