--- a/contents/level1.html
+++ b/contents/level1.html
@@ -54,12 +54,11 @@
             <div class = "image-front">
                 <img style = "width: 250px; height: 150px;" src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/level1.png">
             </div>
-            <div class = "header-front">Personal pronouns / „to be“</div>
+            <div class = "header-front">Basic grammar</div>
             <div class = "author">Author: Amir Youssef</div>
         </div>
         <style>
     .card {
-        margin: 5px;
         width: 250px;
         height: 250px;
         background-color: #00594F;
@@ -98,7 +97,7 @@
                 <div class = "image-front">
                     <img style = "width: 250px; height: 150px;" src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/level1.png">
                 </div>
-                <div class = "header-front">Personal pronouns / „to be“</div>
+                <div class = "header-front">Verb forms, Objective pronouns</div>
                 <div class = "author">Author: Amir Youssef</div>
             </div>
             <style>
@@ -109,6 +108,7 @@
             color: #ffffff;
             transition: 0.5s ease-in-out;
             font-family: Alegreya Sans;
+            margin: 5px;
           }
         .header-front {
             width: inherit;
