--- a/contents/level1.html
+++ b/contents/level1.html
@@ -19,6 +19,7 @@
 .card {
     width: 250px;
     height: 250px;
+    margin: 5px;
     background-color: #00594F;
     color: #ffffff;
     transition: 0.5s ease-in-out;
