--- a/indexSpeak.html
+++ b/indexSpeak.html
@@ -10,6 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Asset' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alegreya Sans' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -184,11 +185,18 @@
                     <div class = "caption-offer">Learn on your schedule</div>
             </div>
 
-
+        </div>  
     </section>
     <!--Row 3-->
     <section class = "row row-3">
-        <div class = "left-side"></div>
+        <div class = "left-side">
+            <div id = "story-header">Listen to the Stranger story by Norman Whitney</div>
+            <div id = "video"></div>
+            <video width = "100%" height = "auto" controls>
+                <source src = "contents/vid_1.mp4" type = "video/mp4">
+            </video>
+            </div>
+        </div>
         <div class = "right-side">
             <div class = "nav-bar-english-header">
                 <span class = "eng-header">Miscellaneous</span>
@@ -199,11 +207,11 @@
             </div>
             <div class = "gallery">
                 <div class = "screen">
-                    <div class = "texter">1</div>
+                    <!--<div class = "texter">1</div>
                     <div class = "texter">2</div>
                     <div class = "texter">3</div>
                     <div class = "texter">4</div>
-                    <div class = "texter">5</div>
+                    <div class = "texter">5</div>-->
                 </div>
                 <div class = "item-arrow-left">
                     <div class = "arrow-box"></div>
@@ -264,7 +272,6 @@
                 100% {
                     background-color: #CACACA;
                 }
-
             }
         </style>
         
