--- a/indexSpeak.html
+++ b/indexSpeak.html
@@ -190,12 +190,42 @@
             <!--Mobile device grid course-->
        <div id = "mobileCourse">
             <div class = "openCourse">
-                <div class = "courseLevel">Level A1-A2</div>
-                <div class = "arrow-open">
+                <div class = "courseLevel">Level Elementary A1-A2</div>
+                <div class = "arrow-open open-arrow-1">
                     <div class = "box-arrow"></div>
                 </div>
             </div>
+            <div class = "level-content level-1"></div>
+            <div class = "openCourse">
+                    <div class = "courseLevel">Level Pre-Intermediate A2-B1</div>
+                    <div class = "arrow-open">
+                        <div class = "box-arrow"></div>
+                    </div>
+                </div>
+                <div class = "level-content level-2"></div>
+                <div class = "openCourse">
+                        <div class = "courseLevel">Level Intermediate B1-B2</div>
+                        <div class = "arrow-open">
+                            <div class = "box-arrow"></div>
+                        </div>
+                    </div>
+                    <div class = "level-content level-3"></div>
+                    <div class = "openCourse">
+                            <div class = "courseLevel">Level Upper-Intermediate B2-C1</div>
+                            <div class = "arrow-open">
+                                <div class = "box-arrow"></div>
+                            </div>
+                    </div>
+                    <div class = "level-content level-4"></div>
+                    <div class = "openCourse">
+                            <div class = "courseLevel">Level Advanced C2</div>
+                            <div class = "arrow-open">
+                                <div class = "box-arrow"></div>
+                            </div>
+                    </div>
+                    <div class = "level-content level-5"></div>
         </div>
+
             <div class = "nav-bar-english-header">
                 <span class = "eng-header">Miscellaneous</span>
                 <span class = "eng-header">Business English</span>
