--- a/contents/fixedCourseContent.html
+++ b/contents/fixedCourseContent.html
@@ -5,17 +5,27 @@
             <div class = "courseContent">Basic grammar</div>
             <div class = "courseContent"> Verb forms</div>
             <div class = "courseContent"> Negative,questions</div>
-            <div class = "courseContent">There is /there/ articles plural</div>
-            <div class = "courseContent">Revision and imperative</div>
+            <div class = "courseContent">There is/there/articles plural</div>
             <div class = "courseContent">The verb CAN</div>
             <div class = "courseContent">Past simple(to be)</div>
             <div class = "courseContent">Past simple</div>
             <div class = "courseContent">Past simple(N&Q) </div>
             <div class = "courseContent">Future tense</div>
-            <div class = "courseContent">Revision</div>
             <div class = "courseContent">Comparative &adjectives</div>
             <div class = "courseContent">Would like</div>
             <div class = "courseContent">Present continuous </div>
+            <div class = "courseContent">Prepositions</div>
+            <div class = "courseContent">Expressing future</div>
+            <div class = "courseContent">Modal verbs</div>
+            <div class = "courseContent">Passive</div>
+            <div class = "courseContent">Present simple&continuous</div>
+            <div class = "courseContent">Past continuous</div>
+            <div class = "courseContent">Making questions</div>
+            <div class = "courseContent">Countability</div>
+            <div class = "courseContent">Some,any,no</div>
+            <div class = "courseContent">Present perfect</div>
+            <div class = "courseContent">Relative pronouns</div>
+            <div class = "courseContent">Linking words</div>
 
     </body>
 </html>
