--- a/contents/level1.html
+++ b/contents/level1.html
@@ -21,6 +21,7 @@
     height: 250px;
     margin: 5px;
     background-color: #00594F;
+    box-shadow: 0px 10px 8px lightgray;
     color: #ffffff;
     transition: 0.5s ease-in-out;
     font-family: Alegreya Sans;
