--- a/contents/level1.html
+++ b/contents/level1.html
@@ -27,6 +27,9 @@
     transition: 0.5s ease-in-out;
     font-family: Alegreya Sans;
   }
+.card:hover {
+    box-shadow: 0px 10px 20px 10px lightgray;
+  }
 .header-front {
     width: inherit;
     height: 50px;
