--- a/indexSpeak.html
+++ b/indexSpeak.html
@@ -227,11 +227,11 @@
         </div>
 
             <div class = "nav-bar-english-header">
-                <span class = "eng-header">Miscellaneous</span>
-                <span class = "eng-header">Business English</span>
-                <span class = "eng-header">General English</span>
-                <span class = "eng-header">Kids English</span>
-                <span class = "eng-header">Exam-Oriented</span>
+                <span class = "eng-header">Level A1-A2</span>
+                <span class = "eng-header">Level A2-B1</span>
+                <span class = "eng-header">Level B1-B2</span>
+                <span class = "eng-header">Level B2-C1</span>
+                <span class = "eng-header">Level Advanced C2</span>
             </div>
             <div class = "gallery">
                 <div class = "screen">
@@ -241,6 +241,8 @@
                     <div class = "texter">4</div>
                     <div class = "texter">5</div>-->
                 </div>
+                <div class = "screen2"></div>
+                
                 <div class = "item-arrow-left">
                     <div class = "arrow-box"></div>
                 </div>
