--- a/contents/level3.html
+++ b/contents/level3.html
@@ -1,7 +1,7 @@
 <template class = "tem3">
     <div class = "card">
         <div class = "image-front">
-            <img style = "width: 250px; height: 150px;" src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/EnglishB1.jpg">
+            <img style = "width: 250px; height: 150px;" src = "https://raw.githubusercontent.com/freelancer2020/SpeakUp/master/contents/englishTime.jpeg">
         </div>
         <div class = "header-front">Present simple vs.present continuous</div>
         <div class = "author">Author: Amir Youssef</div>
