--- a/grammerQuiz.html
+++ b/grammerQuiz.html
@@ -22,6 +22,15 @@
                     <div class = " itemn item-q-1"> I just saw her</div>
                     <div class = "itemn item-n-1"></div>
                     <div class = "itemn item-q-compelte">day.</div>
+                    <div class = "conf">
+                        <div class = "right">
+                            <div class = "right-symbol"></div>
+                        </div>
+                        <div class = "wrong">
+                            <div class = "wrong-1"></div>
+                            <div class = "wrong-2"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -35,6 +44,16 @@
                     <div class = " itemn item-q-1"> He denied</div>
                     <div class = "itemn item-n-1"></div>
                     <div class = "itemn item-q-compelte">it.</div>
+                    <div class = "conf">
+                        <div class = "right">
+                            <div class = "right-symbol"></div>
+                        </div>
+                        <div class = "wrong">
+                            <div class = "wrong-1"></div>
+                            <div class = "wrong-2"></div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
 
@@ -48,6 +67,15 @@
                     <div class = " itemn item-q-1">This is the town</div>
                     <div class = "itemn item-n-1"></div>
                     <div class = "itemn item-q-compelte">I was born.</div>
+                    <div class = "conf">
+                        <div class = "right">
+                            <div class = "right-symbol"></div>
+                        </div>
+                        <div class = "wrong">
+                            <div class = "wrong-1"></div>
+                            <div class = "wrong-2"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -179,6 +207,61 @@
                 85% {transform: scale(1.5);}
                 100% {transform:scale(1);}
             }
+
+
+.right {
+  width: 40px;
+  height: 50px;
+  position: relative;
+  display: none;
+}
+
+.right-symbol {
+  width: 20px;
+  height: 10px;
+  border-bottom: 5px solid #54C571;
+  border-left: 5px solid #54C571;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+  transform: rotate(-45deg);
+}
+
+.wrong {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  display: none;
+}
+.wrong-1 {
+  width: 25px;
+  height: 5px;
+  background-color: #F70D1A;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  transform: rotate(-45deg);
+}
+
+.wrong-2 {
+  width: 25px;
+  height: 5px;
+  background-color: #F70D1A;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  transform: rotate(45deg);
+}
+
         </style>
 
         <script>
@@ -272,6 +355,8 @@
                groupCanswers[i].addEventListener("click", questionThree, false);
            }
 
+
+           
 
         </script>
 
